[package]
name = "amm_client"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "amm_client"
path = "src/main.rs"

[dependencies]
raydium-contract-instructions = { path = "../lib"}
spl-token = { version = "7.0.0", features = ["no-entrypoint"], default-features = false }
spl-associated-token-account = "6.0.0"
solana-client = "2.1.7"
solana-sdk = "2.1.7"
anyhow = "1.0.53"

