[package]
name = "raydium-contract-instructions"
version = "0.1.0"
edition = "2021"


[patch.crates-io]
zeroize = "1.3.0"

[dependencies]
solana-program = "2.1.0"
spl-token = { version = "=7.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "=6.0.0", features = [
    "no-entrypoint",
] }
thiserror = "=2.0.9"
ahash = "=0.8.11"
zeroize = "1.8.1" 