[package]
name = "raydium-contract-instructions"
version = "0.1.0"
edition = "2021"

[patch.crates-io]
# Force all dependencies to use the same version of `zeroize` that pump requires
zeroize = "1.3.0"

[dependencies]
solana-program = "2.1.7"  # Align to 2.1.0 to resolve conflicts
spl-token = { version = "=7.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "=6.0.0", features = ["no-entrypoint"] }
thiserror = "=2.0.9"
ahash = "=0.8.11"
zeroize = "1.3.0"  # Force 1.3.0 version to be used for all dependencies
